# hedgemind

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/rules/: compliance_report.md  development.mdc  project_definition.mdc
apps/analytics/: admin.py  models.py  tasks.py  urls.py  views.py
apps/audit/: admin.py  models.py
apps/etl/: apps.py  tasks.py
apps/organizations/: admin.py  apps.py  middleware.py  models.py  urls.py  views.py
apps/portfolios/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
apps/reference_data/: admin.py  apps.py  canonical_data.py  models.py  models.py.old
apps/reports/: admin.py  models.py  urls.py  views.py
bugs/: 001-database-permission-denied-schema-public.md  002-celery-multiprocessing-windows-permission-error.md  README.md
config/: __init__.py  celery.py  urls.py
config/settings/: __init__.py  base.py  dev.py  prod.py  test.py
docs/: DATA_PIPELINES_WORKFLOW.md  ORGANIZATION_SCOPING_REFERENCE_DATA.md  REFERENCE_DATA_COMMANDS.md  YIELD_CURVE_DATA_MODEL.md
docs/BEAC/: beac_curves_2025.xlsx  beac_fx_rates.xlsx
docs/BVMAC/: bvmac_constituents.xlsx  bvmac_index_levels.xlsx  bvmac_prices_2025-12.xlsx
docs/instruments/: instruments_bonds.xlsx  (+2 more)
libs/: README_ORGANIZATION_OWNED_MODEL.md  choices.py  command_utils.py  models.py  organization_query.py  tenant_context.py
scripts/: create_templates.py  example_import_instruments.sh  example_import_issuers.sh  example_import_market_data.sh  example_setup_new_organization.sh  fix_db_permissions.sql
tests/: __init__.py  conftest.py  factories.py
(+162 files in other folders)
