[project]
name = "hedgemind"
version = "0.1.0"
description = ""
authors = [
    {name = "spmael",email = "mael.pidjou@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "django (==5.2)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "django-storages (>=1.14.6,<2.0.0)",
    "boto3 (>=1.42.18,<2.0.0)",
    "celery (>=5.6.1,<6.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "django-celery-beat (>=2.8.1,<3.0.0)",
    "django-celery-results (>=2.6.0,<3.0.0)",
    "django-money (>=3.5.4,<4.0.0)",
    "django-countries (>=8.2.0,<9.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=apps",
    "--cov=libs",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--reuse-db",
    "-v",
]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
    "ipython (>=9.8.0,<10.0.0)",
    "django-debug-toolbar (>=6.1.0,<7.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "faker (>=40.1.0,<41.0.0)"
]
